--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./assets/css/hamburger.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,7 +24,7 @@
                 <ul id="menu">
                     <li><a href="./index.html">Página inicial</a></li>
                     <li><a href="./index.html?#times">Times</a></li>
-                    <li><a href="./index.html?#maisVendidos">Mais vendidas</a></li>
+                    <li><a href="./maisVendidos.html">Mais vendidas</a></li>
                     <li><a href="cadastrar.html">Criar conta</a></li>
                     <li><a href="#sobreNos">Sobre Nós</a></li>
                 </ul>
@@ -58,7 +60,6 @@
                 </div>
 
                 <div class="novidades-div" id="maisVendidos">
-
                     <div class="novidades-title">
                         <h1>Novidades</h1>
                     </div>
@@ -91,9 +92,7 @@
                     </div>
                 </div>
 
-
                 <div class="sobreNos">
-                
                     <div class="novidades-title" id="sobreNos">
                         <h1>Sobre Nós</h1>
                     </div>
@@ -106,7 +105,7 @@
                         </p>
                         <div class="figure-sobrenos">
                             <figure>
-                                <img class="" src="./assets/images/loja.jpeg" alt="cruzeiro">
+                                <img src="./assets/images/loja.jpeg" alt="cruzeiro">
                                 <figcaption>Rio Branco, 323 - Centro</figcaption>
                             </figure>
                         </div>
