--- a/cadastrar.html
+++ b/cadastrar.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="../assets/css/cadastrar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,7 +25,7 @@
                 <ul id="menu">
                     <li><a href="./index.html">Página inicial</a></li>
                     <li><a href="./index.html?#times">Times</a></li>
-                    <li><a href="./index.html?#maisVendidos">Mais vendidas</a></li>
+                    <li><a href="./maisVendidos.html">Mais vendidas</a></li>
                     <li><a href="cadastrar.html">Criar conta</a></li>
                     <li><a href="#footer">Sobre Nós</a></li>
                 </ul>
@@ -37,7 +39,7 @@
         </div>
     </header>
     <main>
-        <div class="form-div">
+        <div class="formulario">
             <form>
                 <fieldset class="div-campos">
                     <label for="name">Nome:</label>
