--- a/cadastrar.html
+++ b/cadastrar.html
@@ -34,7 +34,7 @@
         <div class="main-div-header">
             <div class="div-logo">
                 <h1 class="main-title">FutCamisas</h1>
-                <img class="logo" src="../assets/images/logo.png" alt="logo">
+                <img class="logo" src="./assets/images/logo.png" alt="logo">
             </div>
         </div>
     </header>
