--- a/cadastrar.html
+++ b/cadastrar.html
@@ -77,7 +77,7 @@
     </main>
     <footer id="footer">
         <div class="div-footer-info">
-            <img class="footer-image" src="../assets/images/logo.png" alt="logo">
+            <img class="footer-image" src="./assets/images/logo.png" alt="logo">
             <div class="div-footer-social-media">
                 <p>Instagram: </p><b> @futCamisasOficial</b>
             </div>
